cabal-version:       >=1.10
name:                wiki
version:             0.1.0.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable wiki
  main-is:             Main.hs
  other-modules:       LinkMetadata, Inflation
  other-extensions:    OverloadedStrings, DeriveGeneric
  build-depends:       base >=4.18,
                       bytestring >=0.11,
                       containers >=0.6,
                       text >=2.0,
                       directory >=1.3,
                       pandoc >=3.0,
                       pandoc-types >=1.23,
                       MissingH >=1.4,
                       pretty-show >=1.9,
                       aeson >=2.0,
                       tagsoup >=0.14,
                       hakyll >=4.15,
                       filestore >=0.6,
                       utf8-string >=1.0,
                       temporary >=1.3,
                       network-uri >=2.6,
                       filepath >=1.4,
                       wai-app-static >=3.1,
                       warp >=3.2,
                       network >=3.1,
                       async >=2.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
